--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Fi\\OsBundle\\": "vendor/fi/osbundle/"
+            "Fi\\OsBundle\\": ""
         }
     },
     "require": {
