--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,25 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Fi\\OsBundle\\": ""
+            "Fi\\OsBundle\\": "src"
         }
     },
     "require": {
         "php": ">=5.4.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.5",
+        "sensiolabs/security-checker": "^3.0",
+        "satooshi/php-coveralls": "^1.0",
+        "squizlabs/php_codesniffer": "^2.7",
+        "phpmd/phpmd": "^2.4",
+        "sebastian/phpcpd": "^2.0",
+        "mockery/mockery": "^0.9.5",
+        "symfony/symfony": "2.8.*"
+    },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "2.0.x-dev"
         }
     }
 }
