--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,14 @@ php:
 
 before_script:
   - composer install
+  - composer config -g secure-http false
 
 script:
   - ant
 
 after_success:
   - if [[ "$TRAVIS_PHP_VERSION" == "5.6" ]]; then php vendor/satooshi/php-coveralls/bin/coveralls -v; fi
-  - bin/security-checker -n security:check
+  - vendor/bin/security-checker -n security:check
 
 notifications:
   email:
